[gd_scene load_steps=6 format=3 uid="uid://bluif37tipwg7"]

[ext_resource type="Script" uid="uid://1ssv824ya57" path="res://source/editor/interfaces/provinces/interface_province_list.gd" id="1_10wi1"]
[ext_resource type="PackedScene" uid="uid://cintikjibl1vr" path="res://source/utils/property_tree/nodes/item_void.tscn" id="2_rlj5c"]
[ext_resource type="Script" uid="uid://dvo2mdraodovy" path="res://source/utils/property_tree/items/property_tree_item.gd" id="3_i652q"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="4_u6nya"]

[sub_resource type="Resource" id="Resource_ub84e"]
script = ExtResource("3_i652q")
text = "Editor settings:"
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[node name="InterfaceProvinceList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10wi1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "A province is a region on the world map.
It's an essential feature of most grand strategy games.
It has many properties."
fit_content = true

[node name="EditorSettingsCategory" parent="VBoxContainer" instance=ExtResource("2_rlj5c")]
unique_name_in_owner = true
layout_mode = 2
item = SubResource("Resource_ub84e")

[node name="Spacing" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSection" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer/ButtonSection"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_u6nya")
text = "+ Add"

[node name="ItemList" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ItemList"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="ItemContainer" type="VBoxContainer" parent="VBoxContainer/ItemList/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ButtonSection/AddButton" to="." method="_on_add_button_pressed"]
